# herdr-plugin-jj-workspace

./: .env.example  Cargo.toml  README.md  herdr-plugin.toml  new-pane.sh  open-new.sh  remove.sh
src/: main.rs
