[package]
name = "jj-workspace"
version = "0.1.0"
edition = "2021"

# Same TUI stack as Herdr, so the wizard pane renders the real worktree-style
# modal (ported from herdr's src/ui/dialogs.rs + widgets.rs).
[dependencies]
ratatui = "0.30"
crossterm = "0.29"

[profile.release]
opt-level = "z"
lto = true
strip = true
